stable infra, user-service, diary-service
Signed-off-by: Pavel <sprt4758@gmail.com>